# infinite-scroll

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.trellis/: .developer  .template-hashes.json  workflow.md
.trellis/.backup-2026-05-04T10-50-23/.claude/: settings.local.json
.trellis/.backup-2026-05-04T10-50-23/.trellis/: .template-hashes.json
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-04-infinite-scroll-win/: task.json
.trellis/workspace/RicardoZeng/: index.md  journal-1.md
src/: App.test.tsx  App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  model.rs  persistence.rs  session.rs  shell.rs
src-tauri/src/commands/: mod.rs  state.rs  terminal.rs  window.rs  workspace.rs
src/components/: App.module.css  ErrorBoundary.tsx  HelpOverlay.module.css  HelpOverlay.tsx  LoadingSkeleton.module.css  LoadingSkeleton.tsx  NotesCell.module.css  NotesCell.tsx  RowView.module.css  RowView.tsx  SearchPanel.module.css  SearchPanel.tsx  TerminalCell.module.css  TerminalCell.test.tsx  TerminalCell.tsx  WorkspaceCanvas.module.css  WorkspaceCanvas.test.tsx  WorkspaceCanvas.tsx  WorkspaceSwitcher.module.css  WorkspaceSwitcher.tsx
src/hooks/: useElementSize.ts  useSessionOrchestrator.ts  useShortcuts.ts  useTerminalSession.ts
src/lib/: inputBatcher.test.ts  inputBatcher.ts  tauri.ts  terminalBridge.ts
src/store/: useWorkspaceStore.ts  workspaceStore.test.ts  workspaceStore.ts
src/types/: workspace.ts
(+13 files in other folders)
