[package]
name = "infinite-scroll"
version = "0.1.0"
description = "Infinite Scroll Windows desktop app"
authors = ["Codex"]
edition = "2021"

[lib]
name = "infinite_scroll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = "6.0.0"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2.0.18"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
